--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -27,13 +27,13 @@
             </div>
             <div class="modal-body">
                 <label class="radio">
-                    <input type="radio" name="gender"  value="male" (click)="radioButtonValue('male')"> Male
+                    <input type="radio" name="gender"  value="male" (click)="radioButtonValue('Male')"> Male
                 </label><br>
                 <label class="radio">
-                    <input type="radio" name="gender" value="female" (click)="radioButtonValue('female')"> Female
+                    <input type="radio" name="gender" value="female" (click)="radioButtonValue('Female')"> Female
                   </label><br>
                 <label class="radio">
-                    <input type="radio" name="gender" value="not to say" (click)="radioButtonValue('not to say')"> Prefer Not To Say
+                    <input type="radio" name="gender" value="not to say" (click)="radioButtonValue('Not to say')"> Prefer Not To Say
                 </label>
             </div>
             <div class="modal-footer">
