--- a/insta-clone/src/app/signup/signup.component.html
+++ b/insta-clone/src/app/signup/signup.component.html
@@ -19,11 +19,38 @@
       </div>
 
       <div class="row input-row">
-        <input type="text" placeholder="Mobile Number or Email" #email class="input-1" />
-        <input type="text" placeholder="Full Name" #name class="input-2" />
-        <input type="text" placeholder="Username" #instaHandle class="input-3" />
-        <input type="password" placeholder="Password" #password class="input-4" />
-        <input type="button" value="Sign up" (click)="signup()" class="btn signup-btn"/>
+        <form #form="ngForm" (ngSubmit)="signup(form.value)">
+          <div class="outDiv">
+            <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" ngModel  required placeholder="Mobile Number or Email" #email="ngModel" class="input-1" (blur) ="checkUniqueness(email)" >
+            <span><i class="fa fa-times-circle wrongIcon" [style.display]="(email.invalid && email.touched) || isEmail ? 'block' : 'none'"></i></span>
+            <span><i class="fa fa-check-circle rightIcon" [style.display]="email.valid && email.touched && !isEmail ? 'block' : 'none'"></i></span>
+          <!-- {{isEmail}} -->
+          </div>
+          
+          <div>
+            <input type="text" name="name" ngModel required placeholder="Full Name" #name="ngModel" class="input-2" />
+            <span><i class="fa fa-check-circle rightIcon" [style.display]="name.valid && name.touched ? 'block' : 'none'"></i></span>
+          </div>
+
+          <div>
+            <input type="text" name="instaHandle" ngModel required placeholder="Username" #instaHandle="ngModel" class="input-3" (blur) ="checkUniqueness(instaHandle)" />
+            <span><i class="fa fa-times-circle wrongIcon" [style.display]="(instaHandle.invalid && instaHandle.touched) || isinstaHandle ? 'block' : 'none'"></i></span>
+            <span><i class="fa fa-check-circle rightIcon" [style.display]="instaHandle.valid && instaHandle.touched && !isinstaHandle ? 'block' : 'none'"></i></span>
+          <!-- {{isinstaHandle}} -->
+          </div>
+
+          <div>
+            <input type="password" name="password" ngModel required placeholder="Password" #password="ngModel" class="input-4" />
+            <span><i class="fa fa-check-circle rightIcon" [style.display]="password.valid && password.touched ? 'block' : 'none'"></i></span>
+          </div>
+
+          <button [disabled]="form.invalid" type="submit" class="btn signup-btn">Sign up</button>
+        </form>
+      </div>
+      <div>
+        <small  class="warning" [style.display]="warning ? 'block' : 'none'">
+          {{warningText}}
+        </small>
       </div>
 
       <div class="row terms-row">
