--- a/insta-clone/src/app/signup/signup.component.css
+++ b/insta-clone/src/app/signup/signup.component.css
@@ -233,18 +233,25 @@ input:focus {
   }
 
 
-  .outDiv{
+  /* .outDiv{
     position: relative;
-  }
+  } */
+  
   .wrongIcon{
-    position: absolute;
+    /* position: absolute;
     right: 0rem;
     top: 0rem;
     font-size: 1.9em;
-    padding-right: -25rem;
+    padding-right: -25rem; */
     color: rgb(237, 73, 86);
   }
 
   .rightIcon{
     color: darkgray;
   }
+
+  .warning{
+    color : rgb(237, 73, 86);
+  }
+
+  
