--- a/insta-clone/src/app/edit-profile/edit-profile.component.html
+++ b/insta-clone/src/app/edit-profile/edit-profile.component.html
@@ -4,25 +4,25 @@
         <div class="col-lg-3 col-md-3">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="javascipt: void(0)" routerLink="editProfileDetails" class="nav-link active">
+                    <a href="javascipt: void(0)" #edit1 routerLink="editProfileDetails" routerLinkActive="navlink active"  class="nav-link">
                         <span class="link-text">Edit Profile</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="javascipt: void(0)" routerLink="changePassword" class="nav-link">
+                    <a href="javascipt: void(0)" #edit2 routerLink="changePassword" routerLinkActive="navlink active" class="nav-link">
                         <span class="link-text">Change Password</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="" routerLink="" class="nav-link">
+                    <a href="" routerLink="" class="nav-link" routerLinkActive="navlink">
                         <span class="link-text">Apps and Websites</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="" routerLink="" class="nav-link">
+                    <a href="" routerLink="" class="nav-link" routerLinkActive="navlink">
                         <span class="link-text">Email and SMS</span>
                     </a>
                 </li>
