--- a/insta-clone/src/app/signup/signup.component.css
+++ b/insta-clone/src/app/signup/signup.component.css
@@ -24,9 +24,11 @@
 
 
 .login-with-fb{
-  color: black;
+  padding:0.3rem 4.5rem 0.3rem 4.5rem;
+  color: white;
   font-weight: 550;
   font-size: 1rem;
+  background-color: #3897f0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -48,12 +50,27 @@
    padding:0 2rem;
   }
 
-.input-row{
-  padding:0 3rem 1rem;
+.signupForm{
+  width: 100%;
 }
 
-.input-1,
-.input-2 {
+.input-row{
+  padding-left:3rem;
+}
+
+input{
+  width: 87%;
+  font-size: 0.9rem;
+  border: 1px solid #dbdbdb;
+  padding: 9px 0px 7px 8px;
+  border-radius: 3px;
+  margin-bottom: 7px;
+  background: #fafafa;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* input{
   width: 100%;
   margin-bottom: 7px;
   padding: 9px 0px 7px 8px;
@@ -64,10 +81,10 @@
   background: #fafafa;
   font-family: Arial, Helvetica, sans-serif;
 
-}
+} */
 
 .signup-btn {
-  width: 100%;
+  width: 87%;
   background-color: #3897f0;
   border: 1px solid #3897f0;
   padding: 5px 12px;
@@ -80,9 +97,9 @@
   font-size: medium;
 }
 
-input:focus {
+/* input:focus {
     border-style: solid;
-}
+} */
 .terms-row{
   padding:1rem 4rem;
 }
@@ -120,129 +137,18 @@ input:focus {
   height:3rem;
 }
 
+
   
-  .main-content {
-    position: relative;
-    width: 250px;
-    height: 90%;
-    margin: 1.875rem auto 1.25rem;
-    background-color: #fff;
-    border: 2px solid #e6e6e6;
-    padding: 1.875rem 3.125rem 1.875rem;
-  }
   
-  .header {
-    border: 0px solid gray;
-    margin-bottom: 5px;
-  }
-  
-  .header img {
-    position: relative;
-    height: 50px;
-    width: 175px;
-    margin: 0 auto;
-    left: 0.5rem;
-  }
-  .header div {
-    text-align: center;
-    color: #999999;
-    font-size: 14px;
-    line-height: 1.5rem;
-    margin: 8px 8px 15px;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  }
-  
-  .input-1,
-  .input-2,
-  .input-3,
-  .input-4 {
-    width: 100%;
-    margin-bottom: 7px;
-    padding: 9px 0px 7px 8px;
-    border: 1px solid #dbdbdb;
-    box-sizing: border-box;
-    border-radius: 3px;
-    line-height: 25px;
-    background: #fafafa;
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-  }
-  
-  .overlap-text {
-    position: relative;
-  }
-  
-  .overlap-text p {
-    text-align: center;
-    margin:8px 20px 0px;
-    top: 20px;
-    color: #999999;
-    font-size: 14px;
-    line-height: 20px;
-    text-decoration: none;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  }
-  
-  .btn {
-    width: 100%;
-    background-color: #3897f0;
-    border: 1px solid #3897f0;
-    padding: 5px 12px;
-    margin-top:8px;
-    color: #fff;
-    font-weight:normal;
-    cursor: pointer;
-    line-height: 25px;
-    border-radius: 5px;
-    font-size: medium;
-  }
-  
-  .sub-content {
-    width: 250px;
-    height: 40%;
-    margin: 10px auto;
-    border: 1px solid #e6e6e6;
-    padding: 20px 50px;
-    background-color: #fff;
-  }
-  
-  .s-part {
-    text-align: center;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif ;
-    font-weight: 100;
-  
-  }
-  
-  .s-part a {
-    text-decoration: none;
-    cursor: pointer;
-    color: #3897f0;
-    font-weight: bold;
-  }
-  
-  input:focus {
-      border-style: solid;
-  }
 
   @media (min-width: 992px) {
     .offset-lg-4 {
-       margin-left: 37%; /* <- your value here */
+       margin-left: 37%; 
     }
   }
 
-
-  /* .outDiv{
-    position: relative;
-  } */
   
   .wrongIcon{
-    /* position: absolute;
-    right: 0rem;
-    top: 0rem;
-    font-size: 1.9em;
-    padding-right: -25rem; */
     color: rgb(237, 73, 86);
   }
 
