--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -8,7 +8,7 @@
             <p class="modal-title w-100"><b>Followers</b></p>
             <button type="button" class="close" data-dismiss="modal" >&times;</button>
           </div>
-    
+          
           <!-- Modal body -->
           <div class="modal-body" *ngFor="let followers of followersArray">
               <div class="row">
@@ -16,12 +16,12 @@
                     <img src="../../assets/ss.png" class="rounded-circle follwers-img" alt="">
                 </div>
                 <div class="col-lg-7">
-                  <div class="followers-username" ><a [routerLink]="['../',followers.followerId._id]" data-dismiss="modal"><b>{{followers.followerId.instaHandle}}</b></a></div>
-                  <div class="followers-name">{{followers.followerId.name}}</div>
+                  <div class="followers-username" ><a [routerLink]="['../',followers.follower.followerId._id]" (click)="loadUserData(null, followers.follower.followerId.instaHandle)" data-dismiss="modal"><b>{{followers.follower.followerId.instaHandle}}</b></a></div>
+                  <div class="followers-name">{{followers.follower.followerId.name}}</div>
                 </div>
                 <div class="col-lg-3">
-                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow(followers.followerId._id)">Follow</button></a>
-                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow(followers.followerId._id)">Following</button></a>
+                    <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId._id)">Follow</button></a>
+                    <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId._id)">Following</button></a>
                 </div>
               </div>    
           </div>
@@ -48,12 +48,12 @@
                     <img src="../../assets/ss.png" class="rounded-circle following-img" alt="">
                 </div>
                 <div class="col-lg-7">
-                  <div class="following-username"><a [routerLink]="['../',following.followingId._id]" data-dismiss="modal"><b>{{following.followingId.instaHandle}}</b></a></div>
-                  <div class="following-name">{{following.followingId.name}}</div>
+                  <div class="following-username"><a [routerLink]="['../',following.following.followingId._id]" (click)="loadUserData(null, following.following.followingId.instaHandle)" data-dismiss="modal"><b>{{following.following.followingId.instaHandle}}</b></a></div>
+                  <div class="following-name">{{following.following.followingId.name}}</div>
                 </div>
                 <div class="col-lg-3">
-                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow(following.followingId._id)">Follow</button></a>
-                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow(following.followingId._id)">Following</button></a>
+                    <a ><button class="btn btn-primary follow-btn" *ngIf="following.following.followingId._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId._id)">Follow</button></a>
+                    <a ><button class="btn unfollow-btn" *ngIf="following.following.followingId._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId._id)">Following</button></a>
                 </div>
               </div> 
           </div>
