--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -23,12 +23,13 @@
 .search-result{
     
     margin-top: 1.5rem;
-    width: 15%;
+    width: 16rem;
     list-style: none;
     font-size: 1rem;
     border: 1px solid #DBDBDB;
     border-radius: 3px;
     position: absolute;
+    max-height: 20rem;
     overflow-y: auto;
     background: #fff;
     padding:0;
