--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -92,7 +92,7 @@
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Email</label>
                     <div class="col-lg-8">
-                        <input class="form-control" ngModel type="email" #uemail name="email" value="{{email}}" required="required">
+                        <input name="email" class="form-control" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" ngModel type="email" #uemail name="email" value="{{email}}" required="required">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -123,13 +123,17 @@
                         <label style="line-height: 0.8;" class="col-lg-11" for="recommendation">Include your account when recommending similar accounts people might want to follow.</label>
                     </div>
                 </div>
-                <div style="align-self: center;">
-                <small  class="warning" [style.display]="warning ? 'block' : 'none'">
+                <div >
+                <!-- <small style="text-align: center;" [style.display]="form.valid">
+                    Enter a valid email address.
+                </small> -->
+                <small style="text-align: center;"  class="warning" [style.display]="warning ? 'block' : 'none'">
+                
                     {{warningText}}
                 </small>
                 </div>
                 <div class="form-group row">
-                    <div class="col-lg-9 offset-lg-3">
+                    <div class="col-lg-9 offset-lg-3 outDiv">
                         <button class="btn btn-primary" [disabled]="form.pristine" (click)="update()">Submit</button>
                     </div>
                 </div>    
