--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9 offset-lg-1" style=" margin-top: 2.5rem;">
-            <form class="form-horizontal" #userForm="ngForm">
+            <form class="form-horizontal" #form="ngForm">
             <div class="row">
                 <div class="col-lg-3">
                     <img class="rounded-circle" id="profilePic" src="../../assets/ss.png" style="width: 3rem; height: 3rem; float:right;">
