signup validation icon aligned,buttton float corrected, search bar filter apllied,

--- a/insta-clone/src/app/image-gallery/image-gallery.component.html
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <div class="gallery-item row">
+  <div class="gallery-item row" style="background-color: aliceblue;">
       <div *ngFor = "let img of allImages" class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
           <img src={{img}} class="img-responsive">
           <div class="gallery-item-info">
