--- a/insta-clone/src/app/signup/signup.component.html
+++ b/insta-clone/src/app/signup/signup.component.html
@@ -9,9 +9,9 @@
       <div class="row signup-message-row">
         <h2>Sign up to see photos and videos from your friends.</h2>
       </div>
-
-      <div class="row login-with-fb-row">
-        <button class="btn login-with-fb"><img src="../../assets/images/fb-white.png"> Log in with Facebook</button>
+      <!--  -->
+      <div class="row">
+        <button class="btn login-with-fb col-lg-10 offset-lg-1 col-md-10 offset-md-1"><img src="../../assets/images/fb-white.png"> Log in with Facebook</button>
       </div>
 
       <div class="row or-row">
@@ -20,21 +20,21 @@
 
       <div class="row input-row">
         <form #form="ngForm" (ngSubmit)="signup(form.value)" class="signupForm">
-          <div>
-            <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" ngModel  required placeholder="Mobile Number or Email" #email="ngModel" class="input-1" (blur) ="checkUniqueness(email)" >
-            <i class="fa fa-times-circle wrongIcon" [style.display]="(email.invalid && email.touched) || isEmail ? 'inline' : 'none'"></i>
-            <i class="fa fa-check-circle rightIcon" [style.display]="email.valid && email.touched && !isEmail ? 'inline' : 'none'"></i>
+          <div class="input-icons">
+            <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" ngModel  required placeholder="Mobile Number or Email" #email="ngModel" class="input-1" (blur) ="checkUniqueness(email)" ng-focus="">
+            <i class="fa fa-times-circle wrongIcon"  [style.display]="(email.invalid && email.touched) || isEmail ? 'inline' : 'none'"></i>
+            <i class="fa fa-check-circle rightIcon"  [style.display]="email.valid && email.touched && !isEmail ? 'inline' : 'none'"></i>
           </div>
-          <div>
+          <div class="input-icons">
             <input type="text" name="name" ngModel required placeholder="Full Name" #name="ngModel" class="input-2" />
             <i class="fa fa-check-circle rightIcon" [style.display]="name.valid && name.touched ? 'inline' : 'none'"></i>
           </div>
-          <div>
+          <div class="input-icons">
             <input type="text" name="instaHandle" ngModel required placeholder="Username" #instaHandle="ngModel" class="input-3" (blur) ="checkUniqueness(instaHandle)" />
             <i class="fa fa-times-circle wrongIcon" [style.display]="(instaHandle.invalid && instaHandle.touched) || isinstaHandle ? 'inline' : 'none'"></i>
             <i class="fa fa-check-circle rightIcon" [style.display]="instaHandle.valid && instaHandle.touched && !isinstaHandle ? 'inline' : 'none'"></i>
           </div>
-          <div>
+          <div class="input-icons">
             <input type="password" name="password" ngModel required placeholder="Password" #password="ngModel" class="input-4" />
             <i class="fa fa-check-circle rightIcon" [style.display]="password.valid && password.touched ? 'inline' : 'none'"></i>
           </div>
