done with change password and hashing of passwords

--- a/insta-clone/src/app/change-password/change-password.component.html
+++ b/insta-clone/src/app/change-password/change-password.component.html
@@ -9,28 +9,28 @@
                     <h4>{{instaHandle}}</h4>
                 </div>
             </div>
-            <form class="form-horizontal" style="margin-top: 2.5rem;">
+            <form class="form-horizontal" #changePasswordForm="ngForm" (ngSubmit)="changePAssword(changePasswordForm.value)"  style="margin-top: 2.5rem;">
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Old Password</label>
                     <div class="col-lg-9">
-                        <input type="password" class="form-control" name="Name"  required="required">
+                        <input type="password" name="oldPassword" #oldPassword="ngModel" ngModel required class="form-control" >
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">New Password</label>
                     <div class="col-lg-9">
-                        <input type="password" class="form-control" name="Username"  required="required">
+                        <input type="password" name="newPassword" #newPassword="ngModel" ngModel required class="form-control" >
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Confirm New Password</label>
                     <div class="col-lg-9">
-                        <input type="password" class="form-control" name="Website"  required="required">
+                        <input type="password" name="confirmNewPassword" #confirmNewPassword="ngModel" ngModel required class="form-control" >
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-lg-9 offset-lg-3">
-                        <button class="btn btn-primary" ng-click="updateMe()">Change Password</button>
+                        <button class="btn btn-primary" [disabled]="changePasswordForm.invalid" >Change Password</button>
                     </div>
                 </div>
             </form>
