added validations in change password

--- a/insta-clone/src/app/change-password/change-password.component.css
+++ b/insta-clone/src/app/change-password/change-password.component.css
@@ -3,3 +3,10 @@
     height: 3rem;
     border: 1px solid #dbdbdb;
 }
+
+small{
+    padding: 1rem;
+    color :white;
+    background-color: black;
+
+  }
