--- a/insta-clone/src/app/change-password/change-password.component.html
+++ b/insta-clone/src/app/change-password/change-password.component.html
@@ -9,7 +9,7 @@
                     <h4>{{instaHandle}}</h4>
                 </div>
             </div>
-            <form class="form-horizontal" #changePasswordForm="ngForm" (ngSubmit)="changePAssword(changePasswordForm.value)"  style="margin-top: 2.5rem;">
+            <form class="form-horizontal" #changePasswordForm="ngForm" (ngSubmit)="changePAssword(changePasswordForm)"  style="margin-top: 2.5rem;">
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Old Password</label>
                     <div class="col-lg-9">
@@ -39,6 +39,10 @@
                     <a href="" style="text-decoration: none;">Forgot Password?</a>
                 </div>
             </div>
+            <small style="text-align: center;"  class="warning" [style.display]="isVisible ? 'block' : 'none'">
+                
+                {{message}}
+            </small>
         </div>
     </div>
 </div>
