--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -130,7 +130,7 @@
                 <!-- <small style="text-align: center;" [style.display]="form.valid">
                     Enter a valid email address.
                 </small> -->
-                <small style="text-align: center;"  class="warning" [style.display]="warning ? 'block' : 'none'">
+                <small style="text-align: center;" [style.display]="warning ? 'block' : 'none'">
                 
                     {{warningText}}
                 </small>
