--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -21,21 +21,20 @@
   <div class="row">
     <app-create-post></app-create-post>
 
-    <div *ngFor = "let img of allImages" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
+    <div *ngFor = "let item of feed" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
         <div class="col-lg-1">
           <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid black;">
         </div>
         <div class="col-lg-10">
-          <div><b>username</b></div>
-          <div style="line-height: 0.8;">name</div>
+          <div><b>{{item.user.instaHandle}}</b></div>
         </div>
         <div class="col-lg-1">
           <span ><b><h3 >...</h3></b></span>
         </div>
       </div>
       <div class="row user-image-row">
-        <img src={{img}} class="img-responsive" style="width: 100%; ">
+        <img src="{{allImages}}[2]" class="img-responsive" style="width: 100%; ">
       </div>
       <div class="row like-comment-row" style="padding-top:0.4rem;">
         <input type="checkbox" id="togglelike" class="visually-hidden">
@@ -43,10 +42,10 @@
         <img src="../../assets/images/comment1.png" style="width:1.7rem; height:1.5rem; opacity: 0.75;">
       </div>
       <div class="row" style="padding:0 2rem">
-        <span></span><b>42&nbsp;</b><span>likes</span>
+        <span></span><b>Liked by</b><span>{{item.count.likeCount}}</span>
       </div>
       <div class="row" style="padding:0 2rem">
-        <span></span><b>username&nbsp;</b><span>caption</span>
+        <span></span><b>{{item.user.instaHandle}}</b><span>{{item.caption}}</span>
       </div>
       <div class="row add-comment-section">
         <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
