--- a/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.html
+++ b/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.html
@@ -1,40 +1,21 @@
 <div class="col-md-3 mb-3 order-2 order-md-3">
   <div class="card shadow mb-3">
     <div class="card-body">
-      <h5>Suggestions for you</h5>
+      <div style="clear: both">
+        <h5 class="head-design" style="float: left">Suggestions for you</h5>
+        <h5 class="text-design" style="float: right">See All</h5>
+      </div>
+      <hr />
       <div *ngFor="
           let user of usersArray">
         <p><img src="https://picsum.photos/200/200?random" class="rounded-circle float-left mr-2" width="40">
-          <a href="#">{{user.name}} <small class="text-muted">@LoremIpsum</small></a></p>
-           <!-- <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId._id)">Follow</button></a>
+          <a href="#" class="text-design">{{user.name}} <small class="text-design">@LoremIpsum</small></a></p>
+        <!-- <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId._id)">Follow</button></a>
             <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId._id)">Following</button></a> -->
-          <!-- <div class="col-lg-3">
+        <!-- <div class="col-lg-3">
             <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId._id)">Follow</button></a>
             <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId._id)">Following</button></a>
         </div> -->
         <hr>
       </div>
     </div>
-    <!-- <p><img src="https://picsum.photos/200/200?random" class="rounded-circle float-left mr-2" width="40">
-          <a href="#">Lorem Ipsum <small class="text-muted">@LoremIpsum</small></a></p>
-        <hr>
-        <p><img src="https://picsum.photos/200/200?random" class="rounded-circle float-left mr-2" width="40">
-          <a href="#">Lorem Ipsum <small class="text-muted">@LoremIpsum</small></a></p>
-      </div>
-       <a *ngIf="menu.type !== 'header'" (click)="toggle(menu)">
-            <i class="{{ menu.icon }}"></i>
-            <span>{{ user.name }}</span>
-            <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{ menu.badge.text }}</span>
-        </a>
-      <div class="card-footer">
-        <a href="#">Find more</a>
-      </div>
-    </div> -->
-    <!-- <div class="card shadow">
-      <div class="card-body">
-        &copy; 2018 Lorem Ipsum <a href="#">Dolor</a> <a href="#">Sit</a> <a href="#">Amet</a>
-      </div>
-      <div class="card-footer">
-        Languages <a href="#">English (UK)</a> <a href="#">English (US)</a> <a href="#">English (Aus)</a>
-      </div>
-    </div> -->
