--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -42,10 +42,14 @@
         <img src="../../assets/images/comment1.png" style="width:1.7rem; height:1.5rem; opacity: 0.75;">
       </div>
       <div class="row" style="padding:0 2rem">
-        <span></span><b>Liked by</b><span>{{item.count.likeCount}}</span>
+        <span>Liked by</span><b>{{item.likesArray[0].likedBy.instaHandle}}</b><div >and {{item.count.likeCount}} others</div>
       </div>
       <div class="row" style="padding:0 2rem">
         <span></span><b>{{item.user.instaHandle}}</b><span>{{item.caption}}</span>
+      </div>
+      <div>
+        <span class="viewComments">View all {{item.count.commentCount}} comments</span>
+        <span class="row"><b>{{item.commentsArray[0].commentedBy.instaHandle}}</b></span>
       </div>
       <div class="row add-comment-section">
         <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
