--- a/insta-clone/src/app/image-gallery/image-gallery.component.html
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.html
@@ -1,15 +1,54 @@
-<div class="container mt-5">
-  <div class="gallery-item row" style="background-color: aliceblue;">
-      <div *ngFor = "let img of allImages" class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-          <img src={{img}} class="img-responsive">
-          <div class="gallery-item-info">
-            <ul>
-              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
-              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
-            </ul>
+<!-- <div class="modal" id="postModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body">
+        
+        <div id="carouselExampleControls" class="carousel" data-ride="carousel" data-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block" src="https://www.w3schools.com/bootstrap/ny.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://www.w3schools.com/bootstrap/chicago.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://www.w3schools.com/bootstrap/la.jpg" alt="Third slide">
+            </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
+    </div>
   </div>
+</div> -->
+
+
+
+<div class="container mt-5">
+  <div class="gallery-item row">
+    <div *ngFor="let img of allImages" class="gallery_product col-lg-4 col-md-6 col-sm-6 col-xs-12 filter hdpe" >
+      <img src={{img}} class="img-responsive">
+      <div class="gallery-item-info">
+        <ul>
+          <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart"
+              aria-hidden="true"></i> 89</li>
+          <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment"
+              aria-hidden="true"></i> 5</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  
+
+
 </div>
 
 
@@ -28,7 +67,7 @@
       </div> 
   </div>
 </div> -->
-   
+
 <!-- <div class="container">
   <div class="gallery">
       <div *ngFor = "let img of allImages">
