--- a/insta-clone/src/app/view-post/view-post.component.html
+++ b/insta-clone/src/app/view-post/view-post.component.html
@@ -59,7 +59,7 @@
                         <a href="" class="username-post-caption">username</a>
                         <span class="ml-2">comment comment comment comment comment comment comment comment</span>
                         <p><small><span>time&emsp;</span><span>12</span><span> likes&emsp;</span><span> Reply</span></small></p>
-                        <p (click)="toggle()" id="view-replies"><strong>{{paragraphName}}</strong></p>
+                        <p (click)="toggle()" class="view-replies"><strong>{{paragraphName}}</strong></p>
                         <div *ngIf="show" class="row">
                             <ul >
                                 <li>
