--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -21,7 +21,7 @@
   <div class="row">
     <app-create-post></app-create-post>
 
-    <div *ngFor = "let item of feed" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
+    <div *ngFor = "let item of feed; let i = index" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
         <div class="col-lg-1">
           <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid black;">
@@ -33,23 +33,23 @@
           <span ><b><h3 >...</h3></b></span>
         </div>
       </div>
-      <div class="row user-image-row">
-        <img src="{{allImages}}[2]" class="img-responsive" style="width: 100%; ">
+      <div class="row user-image-row" *ngIf="postImages[i]">
+        <img [src]="postImages[i]" class="img-responsive" style="width: 100%; ">
       </div>
       <div class="row like-comment-row" style="padding-top:0.4rem;">
         <input type="checkbox" id="togglelike" class="visually-hidden">
         <label for="togglelike"  class="control"></label>
         <img src="../../assets/images/comment1.png" style="width:1.7rem; height:1.5rem; opacity: 0.75;">
       </div>
-      <div class="row" style="padding:0 2rem">
+      <!-- <div class="row" style="padding:0 2rem">
         <span>Liked by</span><b>{{item.likesArray[0].likedBy.instaHandle}}</b><div >and {{item.count.likeCount}} others</div>
-      </div>
+      </div> -->
       <div class="row" style="padding:0 2rem">
         <span></span><b>{{item.user.instaHandle}}</b><span>{{item.caption}}</span>
       </div>
       <div>
         <span class="viewComments">View all {{item.count.commentCount}} comments</span>
-        <span class="row"><b>{{item.commentsArray[0].commentedBy.instaHandle}}</b></span>
+        <!-- <span class="row"><b>{{item.commentsArray[0].commentedBy.instaHandle}}</b></span> -->
       </div>
       <div class="row add-comment-section">
         <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
