--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -131,7 +131,7 @@
 <div class="container">
     <div class="row ml-4 mr-1">
         <div class="col-lg-3 offset-lg-1 mt-4 profile-image-div">
-            <img src="../../assets/ss.png" alt="Profile Image" class="rounded-circle profile-img" data-toggle="modal" data-target="#uploadPicModal">
+            <img [src]="image" alt="Profile Image" class="rounded-circle profile-img" data-toggle="modal" data-target="#uploadPicModal">
         </div>
         <div class="col-lg-8 mt-4 profile-details">
             <div class="row edit-profile-div">
