--- a/insta-clone/src/app/modal/modal.component.html
+++ b/insta-clone/src/app/modal/modal.component.html
@@ -1,34 +1,34 @@
+Modal 2 Following Modal
 <div class="modal" id="followingModal">
-    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
-        <div class="modal-content">
-      
-          <!-- Modal Header -->
-          <div class="modal-header text-center">
-            <p class="modal-title w-100"><b>Following</b></p>
-            <button type="button" class="close" data-dismiss="modal" >&times;</button>
-          </div>
+  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+      <div class="modal-content">
     
-          <!-- Modal body -->
-          
-          <div class="modal-body-size-fix">
-              <div class="modal-body" *ngFor="let following of followingArray">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <img src="../../assets/ss.png" class="rounded-circle following-img" alt="">
-                    </div>
-                    <div class="col-lg-7">
-                      <div class="following-username"><a [routerLink]="['../',following.following.followingId._id]" (click)="loadUserData(null, following.following.followingId.instaHandle)" data-dismiss="modal"><b>{{following.following.followingId.instaHandle}}</b></a></div>
-                      <div class="following-name">{{following.following.followingId.name}}</div>
-                    </div>
-                    <div class="col-lg-3">
-                        <a ><button class="btn btn-primary follow-btn" *ngIf="following.following.followingId._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId._id)">Follow</button></a>
-                        <a ><button class="btn unfollow-btn" *ngIf="following.following.followingId._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId._id)">Following</button></a>
-                    </div>
-                  </div> 
-              </div>
-      
-          </div>    
+        <!-- Modal Header -->
+        <div class="modal-header text-center">
+          <p class="modal-title w-100"><b>Likes</b></p>
+          <button type="button" class="close" data-dismiss="modal" >&times;</button>
         </div>
+  
+        <!-- Modal body -->
+        
+        <div class="modal-body-size-fix">
+            <div class="modal-body" *ngFor="let like of likesArray">
+              <div class="row">
+                  <div class="col-lg-2">
+                      <img src="../../assets/ss.png" class="rounded-circle following-img" alt="">
+                  </div>
+                  <div class="col-lg-7">
+                    <div class="following-username"><a [routerLink]="['../',like.likedBy.instaHandle]"  data-dismiss="modal"><b>{{like.likedBy.instaHandle}}</b></a></div>
+                    <div class="following-name">{{like.likedBy.name}}</div>
+                  </div>
+                  <div class="col-lg-3">
+                      <a ><button class="btn btn-primary follow-btn" *ngIf="like.likedBy._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId._id)">Follow</button></a>
+                      <a ><button class="btn unfollow-btn" *ngIf="like.likedBy._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId._id)">Following</button></a>
+                  </div>
+                </div> 
+            </div>
+    
+        </div>    
       </div>
-  </div>
-
+    </div>
+</div>
