--- a/insta-clone/src/app/create-post/create-post.component.scss
+++ b/insta-clone/src/app/create-post/create-post.component.scss
@@ -58,10 +58,10 @@ a{
 
   .post-create{
       border: 1px solid #cdcdcd;
-      border-radius: 2.8px;
+      border-radius: 5px;
       background-color: white;
-    width: 39.12rem;
-    margin-left: 15.6rem;
+      margin-top:1rem;
+    
 
     &__primary{
         margin-left: 0.8rem;
@@ -147,3 +147,17 @@ a{
 .highlight{
     color: #38a1f3;
 }
+
+@media (max-width: 375px) {
+    .post-create {
+       margin-left: 0;
+       max-width: 375px;
+    }
+  }
+@media (max-width: 320px) {
+    .post-create {
+       margin-left: 0;
+       max-width: 320px;
+    }
+  }
+  
