--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
@@ -70,6 +70,22 @@
 }
 
 .modal-body-size-fix{
-    height: 75vh;
+    height: 50vh;
     overflow-y: scroll;
 }
+
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #F1F1F1; 
+    border-bottom-right-radius: 1.3rem;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #A8A8A8; 
+    
+  }
