--- a/insta-clone/src/app/modal/modal.component.html
+++ b/insta-clone/src/app/modal/modal.component.html
@@ -1,34 +1,85 @@
-Modal 2 Following Modal
-<div class="modal" id="followingModal">
+<!-- <div class="modal" id="followersModal">
   <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
     
-        <!-- Modal Header -->
         <div class="modal-header text-center">
-          <p class="modal-title w-100"><b>Likes</b></p>
+          <p class="modal-title w-100"><b>Followers</b></p>
           <button type="button" class="close" data-dismiss="modal" >&times;</button>
         </div>
-  
-        <!-- Modal body -->
         
-        <div class="modal-body-size-fix">
-            <div class="modal-body" *ngFor="let like of likesArray">
-              <div class="row">
-                  <div class="col-lg-2">
-                      <img src="../../assets/ss.png" class="rounded-circle following-img" alt="">
-                  </div>
-                  <div class="col-lg-7">
-                    <div class="following-username"><a [routerLink]="['../',like.likedBy.instaHandle]"  data-dismiss="modal"><b>{{like.likedBy.instaHandle}}</b></a></div>
-                    <div class="following-name">{{like.likedBy.name}}</div>
-                  </div>
-                  <div class="col-lg-3">
-                      <a ><button class="btn btn-primary follow-btn" *ngIf="like.likedBy._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId._id)">Follow</button></a>
-                      <a ><button class="btn unfollow-btn" *ngIf="like.likedBy._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId._id)">Following</button></a>
-                  </div>
-                </div> 
-            </div>
+        <div class="modal-body" *ngFor="let followers of followersArray">
+            <div class="row">
+              <div class="col-lg-2">
+                  <img src="../../assets/ss.png" class="rounded-circle follwers-img" alt="">
+              </div>
+              <div class="col-lg-7">
+                <div class="followers-username" ><a [routerLink]="['../',followers.follower.followerId._id]" (click)="loadUserData(null, followers.follower.followerId.instaHandle)" data-dismiss="modal"><b>INSTA HANDLE</b></a></div>
+                <div class="followers-name">NAME</div>
+              </div>
+              <div class="col-lg-3">
+                  <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId.instaHandle)">Follow</button></a>
+                  <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId.instaHandle)">Following</button></a>
+              </div>
+            </div>    
+        </div>
     
-        </div>    
       </div>
     </div>
+</div> -->
+<div mat-dialog-content>
+  <div class="modal-header text-center">
+    <p class="modal-title w-100"><b>Followers</b></p>
+    <button type="button" class="close" mat-button mat-dialog-close>&times;</button>
+  </div>
+
+  <div class="modal-body" *ngFor="let follower of followers">
+    <div class="row">
+      <div class="col-lg-2">
+        <img
+          src="../../assets/ss.png"
+          class="rounded-circle follwers-img"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-7">
+        <div class="followers-username">
+          <a
+            [routerLink]="['../', followers.follower.followerId._id]"
+            (click)="
+              loadUserData(null, followers.follower.followerId.instaHandle)
+            "
+            data-dismiss="modal"
+            ><b>INSTA HANDLE</b></a
+          >
+        </div>
+        <div class="followers-name">NAME</div>
+      </div>
+      <div class="col-lg-3">
+        <a
+          ><button
+            class="btn btn-primary follow-btn"
+            *ngIf="
+              followers.follower.followerId._id != loggedinUserId &&
+              !followers.relation
+            "
+            (click)="follow(followers.follower.followerId.instaHandle)"
+          >
+            Follow
+          </button></a
+        >
+        <a
+          ><button
+            class="btn unfollow-btn"
+            *ngIf="
+              followers.follower.followerId._id != loggedinUserId &&
+              followers.relation
+            "
+            (click)="unfollow(followers.follower.followerId.instaHandle)"
+          >
+            Following
+          </button></a
+        >
+      </div>
+    </div>
+  </div>
 </div>
