--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -23,7 +23,7 @@
 <div class="row">
   <form class="post-create col-lg-5 offset-lg-2" #form="ngForm" (ngSubmit)="createPostHandler(form.value)">
     <div class="post-create__primary">
-      <div class="post-create__primary--user_img"></div>
+      <img class="post-create__primary--user_img" [src]="bufferedImage" alt="pro-img">
       <textarea name="caption" class="post-create__primary--post_area" placeholder="Show to the world!" [ngModel]="caption" (ngModelChange)="styleCaption($event)"></textarea>
     </div>
     <div class="post-create__secondary">
